apps/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: kavita
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 5000
