apps/kavita/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita-ingress
  namespace: default
spec:
  ingressClassName: public
  tls:
    - secretName: orriborri-com-tls
  rules:
    - host: kavita.orriborri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kavita
                port:
                  number: 80
